feat: add icon and name for system and remove comments

--- a/Login/index.html
+++ b/Login/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Login Page</title>
+    <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
+    <title>EasyStore</title>
   </head>
   <body>
     <div class="login-container">
+      <div class="img">
+        <img src="../assets/stock.png" alt="">
+        <p>EasyStore</p>
+      </div>
       <h2>Login</h2>
       <form id="loginForm">
         <label for="username" class="visually-hidden">Email</label>
