--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>N3 - Controle de Estoque</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>EasyStore</title>
+
+    <link rel="shortcut icon" href="📦" type="image/x-icon">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,8 +16,11 @@
   </head>
   <body>
     <div class="container">
-      <aside class="sidebar">
+      <aside id="side" class="sidebar">
         <nav>
+          <div class="img">
+            <img src="./assets/stock.png" alt="">
+          </div>
           <a href="#" class="nav-link" onclick="showPage('dashboard')"
             >Início</a
           >
