--- a/register/index.html
+++ b/register/index.html
@@ -3,60 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro de Usuário</title>
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.png"
+      type="image/x-icon"
+    />
+    <title>EasyStore</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="register-container">
+      <div class="img">
+        <img src="../assets/stock.png" alt="" />
+        <p>EasyStore</p>
+      </div>
       <h2>Registro de Usuário</h2>
       <form id="registerForm">
-        <div class="form-group">
-          <label for="nome">Nome</label>
-          <input
-            type="text"
-            id="nome"
-            name="nome"
-            placeholder="Nome"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Email"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="senha">Senha</label>
-          <input
-            type="password"
-            id="senha"
-            name="senha"
-            placeholder="*******"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="confirmacaoSenha">Confirmação de Senha</label>
-          <input
-            type="password"
-            id="confirmacaoSenha"
-            name="confirmacaoSenha"
-            placeholder="*******"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="cargo">Cargo</label>
-          <select id="cargo" name="cargo" required>
-            <option value="admin">Admin</option>
-            <option value="funcionario">Funcionário</option>
-          </select>
-        </div>
+        <label for="nome">Nome</label>
+        <input type="text" id="nome" name="nome" placeholder="Nome" required />
+
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
+
+        <label for="senha">Senha</label>
+        <input
+          type="password"
+          id="senha"
+          name="senha"
+          placeholder="*******"
+          required
+        />
+
+        <label for="confirmacaoSenha">Confirmação de Senha</label>
+        <input
+          type="password"
+          id="confirmacaoSenha"
+          name="confirmacaoSenha"
+          placeholder="*******"
+          required
+        />
+
+        <label for="cargo">Cargo</label>
+        <select id="cargo" name="cargo" required>
+          <option value="admin">Admin</option>
+          <option value="funcionario">Funcionário</option>
+        </select>
+
         <button type="submit" id="registerButton">Registrar</button>
       </form>
       <a href="../Login/index.html" class="back-link">Voltar</a>
